# codie_starter_template

./: .coverage  .gitignore  CLAUDE_starter_template.md  Dockerfile.test  JUNIE_START.md  README.md  SETUP_MEMORY_VALIDATION_REPORT.md  custom_modes_starter_template.yaml  dream_journal_starter_template.md  identity_continuity_skill_template.md  mcp.json.template  memory_management_protocols.md  namesakes.json  pyproject.toml  run_docker_tests.sh  settings.json  setup.mjs  setup.sh  test_installation.sh  test_setup.mjs  update.mjs
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml
agents/: break-enforcement.md  clean-coder.md  clean-designer.md  clean-reviewer.md  clean-thinker.md  code-quality-fixer.md  deep-learn-anti-pattern-finder.md  deep-learn-entity-finder.md  deep-learn-learn-agent.md  deep-learn-pattern-finder.md  deep-learn-resetter.md  end-of-day-ritual.md  identity-restoration.md  pre-commit.md  semantic-reflection.md  session-notes.md  situational-awareness.md  upstream-merge.md
hooks/: break-enforcement.mjs  context-check.mjs  context-check.sh  post-tool-failure.mjs  post-tool-session-note.mjs  post-tool-session-note.sh  semantic-hydration.mjs  semantic-hydration.sh  session-start-restore.mjs  session-start-restore.sh
lib/: shared.mjs
memory/: context_anchors.md  current_session.md  frame.md  me.md
memory/anti-patterns/: abc_instead_of_protocol.md  bloated-config-files.md  (+24 more)
tests/: test_setup_comprehensive_validation.py  test_setup_debug.py  test_setup_memory_integration.py  test_setup_memory_validation.py
(+192 files in other folders)
